Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-11-05 (SVN):
    * gtk-launcher: Added RES_MINGL macro, used it in Make_ResMenu() to
      clean up the confusing resolution list start offset.

2011-11-04 (SVN):
    * gtk-launcher: Did missing constifications, made it to compile using
      g++.

2011-11-02 (SVN):
    * vid_ext.c: Fixed stack corruption in dos_getmemory()/seginfo due to
      the missing balancing dos_freememory() calls in VID_InitExtra() and
      VID_ExtraGetModeInfo() for failures and unwanted cases. The bug was
      discovered when h2dos.exe was compiled using gcc-4.5.4.
    * dos_v2.c: Add Sys_Error() calls to dos_getmemory() against reaching
      MAX_SEGINFO and dos_freememory() against uncached seginfo.
    * quakedef.h: updated beta date stamp to 2011-11-02.

2011-10-30 (SVN):
    * cd_sdl.c: Reverted the CDAudio_Update() change from 27 Oct: it does
      not make things better.  Removed the SDL_CDStatus() check before the
      error message in case of SDL_CDPlay() failures: I don't really know
      the significance to it and witnessed that it masked the error report
      once, so I don't see any merit in its presence.

2011-10-30 (SVN):
    * oslibs, windows codecs: Recompiled mpg123 from latest 1.13.4 release.

2011-10-27 (SVN):
    * cd_sdl.c: Simplified, making it similar to cd_linux.c or cd_bsd.c by
      performing checks every two seconds in CDAudio_Update() and caching
      the last check time.

2011-10-26 (SVN):
    * recompiled all windows x64 dlls using a new, gcc-4.5-based toolchain.

2011-10-24 (SVN):
    * engine, sys_unix.c (Sys_GetUserdir): Adjustments to failure messages.
      Moved Sys_mkdir() call to the caller main(). Made the local home_dir
      pointer const.
    * hw_utils, hwmaster/sys_main.c: Likewise.
    * bumped versions for the hexen2 engine to 1.24, hexenworld to 0.24 and
      hwmaster to 1.2.7.

2011-10-24 (SVN):